tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_type_trailing_pure.objc3
module MisplacedQualifierAfterParamTypeTrailingPure;

fn add(lhs: i32, rhs: i32 pure) -> i32;

fn main() -> i32 {
  return 0;
}
